Vavavavavava niño va

--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.css
@@ -34,3 +34,13 @@ button[mat-fab]#descargaCSV{
     margin-left: 2%;
     background-color: #007233;;
 }
+
+.col-sm-5{
+    float: right;
+    margin-right: 20%;
+    margin-bottom: 5%;
+}
+
+#addReq{
+    float: right;
+}
