--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -2,7 +2,11 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-body">
-                <h3 class="card-title">{{proyect.nombre}}</h3>
+                <div id="titulo">
+                    <h3 class="card-title">{{proyect.nombre}}</h3>
+                    <button mat-icon-button><i class="fab fa-twitter fa-2x"></i></button>
+                </div>
+                
                 <button class="btn btn-warning" *ngIf="isAdmin()" (click)="openDialogEditPhoto()">Editar Fotos</button>
                 <br>
                 <br>
