--- a/ExpoFpApp/app/src/main/res/layout/list_preguntas_encuesta.xml
+++ b/ExpoFpApp/app/src/main/res/layout/list_preguntas_encuesta.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <RadioGroup
+            android:id="@+id/radioGroup_respuestas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
