--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -4,12 +4,12 @@
         <div class="row">
             <div class="col-lg-3 col-md-6" style="height:300px"*ngFor="let proyecto of listaProyectosRes | filterBy: proyectoFilter | paginate: { itemsPerPage: 14,
                         currentPage: p}">
-                <div class="card card-outline-inverse" (click)="VerProyecto(proyecto.proyecto)">
+                <div class="card card-outline-inverse">
                     <div class="card-header">
                         <h4 class="m-b-0 text-white">{{proyecto.nombre}} - {{proyecto.curso}}</h4>
                     </div>
                     <br>
-                    <img class="card-img-top img-responsive" style="object-fit:scale-down; height:150px" src={{proyecto.imagen}} alt="Card image cap">
+                    <img class="card-img-top img-responsive" (click)="VerProyecto(proyecto.proyecto)" style="object-fit:scale-down; height:150px" src={{proyecto.imagen}} alt="Card image cap">
                     <div class="card-body">
                         <!--
                         <ngb-rating [readonly]="true" [(rate)]="proyect.valoracionMedia">
