--- a/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
@@ -62,6 +62,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/buttonLoginGoogle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/Login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegistro" />
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
