--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -23,8 +23,8 @@
                         </div>
                     -->
                     <div class="container botones">
-                        <button (click)="openDialogEditProject(proyecto.proyecto)" *ngIf="admin" class="btn btn-warning">Editar</button>
-                        <button (click)="openDialogDeleteProject(proyecto)" *ngIf="admin" class="btn btn-danger">Eliminar</button>
+                        <button (click)="openDialogEditProject(proyecto.proyecto)" *ngIf="admin" class="btn btn-warning"><i class="fas fa-pen"></i></button>
+                        <button (click)="openDialogDeleteProject(proyecto)" *ngIf="admin" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                         </div>
                     </div>
                 </div>
