--- a/ExpoFpApp/app/src/main/res/layout/fragment_comentarios.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_comentarios.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imageViewImgUserComentario"
@@ -26,7 +32,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/imageViewImgUserComentario"
             app:layout_constraintTop_toTopOf="@+id/imageViewImgUserComentario" />
@@ -35,10 +40,10 @@
             android:id="@+id/textViewContenidoComentario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
-            app:layout_constraintStart_toStartOf="@+id/imageViewImgUserComentario"
+            app:layout_constraintStart_toEndOf="@+id/imageViewImgUserComentario"
             app:layout_constraintTop_toBottomOf="@+id/imageViewImgUserComentario" />
 
         <RatingBar
@@ -46,11 +51,21 @@
             style="@style/Widget.AppCompat.RatingBar.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
             android:numStars="10"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/imageViewImgUserComentario"
-            app:layout_constraintTop_toBottomOf="@+id/textViewContenidoComentario" />
+            app:layout_constraintStart_toEndOf="@+id/imageViewImgUserComentario"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAutorComentario" />
+
+        <Button
+            android:id="@+id/buttonEliminarComentario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/Eliminar"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imageViewImgUserComentario" />
     </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+
+    </android.support.v7.widget.CardView>
+
