--- a/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
 
         <EditText
             android:id="@+id/editTextEmailLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
@@ -27,7 +27,7 @@
 
         <EditText
             android:id="@+id/editTextPasswordLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -62,6 +62,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sing_in_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonRegistro" />
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
