cambios graficos en pantalla proyectores y validaciones en login y registro

--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
@@ -31,8 +31,9 @@
                                     </td>
                                 </tr>
                                 <div fxLayout="column" fxLayoutGap="2%">
-                                    <button mat-raised-button color="primary" id="login_boton" (click)="doLogin()">Login</button>
+                                    <button mat-raised-button color="primary" id="login_boton" (click)="doLogin(example-form)">Login</button>
                                     <button mat-stroked-button color="primary" id="loginGogle_boton" (click)="doLoginGoogle()"><i class="fa fa-google"></i> &nbsp;&nbsp; Login Google</button>
+                                    <br>
                                 </div>
                                 
                             </table>
@@ -76,14 +77,17 @@
                                 </tr>
                                 <tr>
                                 </tr>
-                                <button mat-raised-button color="primary" id="signup_boton" (click)="doSignup()">Registrarse</button>
+                                <button mat-raised-button color="primary" id="signup_boton" (click)="doSignup(example-form)">Registrarse</button>
+                                <br>
+                                <br>
                             </table>
                         </form>
                     </mat-tab>
                 </mat-tab-group>
             </div>
         </div>
-
     </div>
-
+</div>
+<div class="alert alert-danger" role="alert" *ngIf="isError">
+    Debes rellenar todos los campos
 </div>
