--- a/ExpoFpApp/app/src/main/res/layout/activity_proyecto_detallado.xml
+++ b/ExpoFpApp/app/src/main/res/layout/activity_proyecto_detallado.xml
@@ -9,13 +9,15 @@
     <RelativeLayout
         android:id="@+id/relative"
         android:layout_width="match_parent"
-        android:layout_height="222dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvAutores"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvCurso">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
@@ -25,53 +27,51 @@
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="368dp"
-        android:layout_height="252dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="41dp"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonVerComentarios"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relative">
+        app:layout_constraintTop_toBottomOf="@+id/tvAutores">
 
         <TextView
             android:id="@+id/tvDescripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.         Donec non purus ex. Mauris ultricies eget ante vel pharetra. Quisque         vestibulum nisi sit amet cursus venenatis. Suspendisse vel faucibus elit.         Phasellus luctus congue diam, vel commodo sem iaculis ac. Praesent iaculis         libero nec pretium semper. Nulla tortor nulla, elementum non vulputate ac, consectetur sit amet eros. In consequat odio nisl, sit amet malesuada dolor tempor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc magna nunc, lacinia eget massa ut, ultrices imperdiet orci. Suspendisse sed dolor sed sapien sagittis efficitur. Nullam convallis urna placerat felis consectetur cursus. Morbi ac enim ac quam fringilla varius. Cras venenatis bibendum sapien.
-        Donec non purus ex. Mauris ultricies eget ante vel pharetra. Quisque
-        vestibulum nisi sit amet cursus venenatis. Suspendisse vel faucibus elit.
-        Phasellus luctus congue diam, vel commodo sem iaculis ac. Praesent iaculis
-        libero nec pretium semper. Nulla tortor nulla, elementum non vulputate ac, consectetur sit amet eros. In consequat odio nisl, sit amet malesuada dolor tempor sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc magna nunc, lacinia eget massa ut, ultrices imperdiet orci. Suspendisse sed dolor sed sapien sagittis efficitur. Nullam convallis urna placerat felis consectetur cursus. Morbi ac enim ac quam fringilla varius. Cras venenatis bibendum sapien."
             tools:layout_editor_absoluteX="141dp"
             tools:layout_editor_absoluteY="373dp" />
     </ScrollView>
 
     <Button
         android:id="@+id/buttonVerComentarios"
-        android:layout_width="158dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Ver Comentarios"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonComentar" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonComentar"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonComentar"
-        android:layout_width="136dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Comentar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/relative" />
+        app:layout_constraintStart_toEndOf="@+id/buttonVerComentarios"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
@@ -80,26 +80,22 @@
 
     <TextView
         android:id="@+id/tvNombre"
-        android:layout_width="203dp"
-        android:layout_height="30dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/relative"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/tvCurso"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvCurso"
-        android:layout_width="79dp"
-        android:layout_height="31dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/relative"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvNombre"
         app:layout_constraintTop_toTopOf="parent" />
@@ -107,25 +103,27 @@
     <RatingBar
         android:id="@+id/rbValoracionMedia"
         style="@style/Widget.AppCompat.RatingBar.Small"
-        android:layout_width="161dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:numStars="10"
         android:rating="3.5"
         app:layout_constraintBottom_toTopOf="@+id/scrollView3"
+        app:layout_constraintEnd_toStartOf="@+id/tvAutores"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relative" />
 
     <TextView
         android:id="@+id/tvAutores"
-        android:layout_width="151dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="35dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/rbValoracionMedia"
