--- a/ExpoFpApp/app/src/main/res/layout/fragment_proyectores.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_proyectores.xml
@@ -46,7 +46,7 @@
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/imageViewProyectoRes"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+                app:layout_constraintTop_toBottomOf="@+id/ratingBarProyRes" />
 
             <TextView
                 android:id="@+id/textView_curso"
@@ -57,10 +57,10 @@
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageViewProyectoRes"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+                app:layout_constraintTop_toBottomOf="@+id/ratingBarProyRes" />
 
             <RatingBar
-                android:id="@+id/ratingBar"
+                android:id="@+id/ratingBarProyRes"
                 style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
