--- a/ExpoFpApp/app/src/main/res/layout/activity_comentar.xml
+++ b/ExpoFpApp/app/src/main/res/layout/activity_comentar.xml
@@ -10,10 +10,14 @@
         android:id="@+id/textViewEscComentario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/Escriba_Comentario"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/ratingBarValoracionComentar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +38,7 @@
 
     <EditText
         android:id="@+id/editTextComentario"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -48,9 +52,11 @@
 
     <Button
         android:id="@+id/buttonComentar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/Comentar"
         app:layout_constraintEnd_toEndOf="@+id/editTextComentario"
         app:layout_constraintStart_toStartOf="@+id/editTextComentario"
