--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -69,6 +69,6 @@
 
 </div>
 
-<div fxFlexFill *ngIf="isEncuesta()">
+<div fxFlexFill *ngIf="isEncuesta() && !isAdmin()">
     <p>Su encuesta ha sido recogida, muchas gracias por haber participado</p>
 </div>
