--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-body">
                 <div id="titulo">
-                    <h3 class="card-title">{{proyect.nombre}}</h3>
+                    <h3 class="card-title">Nombre: {{proyect.nombre}}</h3>
 
                     <button mat-icon-button>
                         <a class="twitter-share-button"
@@ -66,12 +66,13 @@
             </div>
             <div class="card-body">
                 <input formControlName="contenido" class="form-control" id="contenido" [(ngModel)]="contenido" placeholder="comentario" type="text">
-                <div *ngIf="comentarioForm.controls['contenido'].invalid && (comentarioForm.controls['contenido'].dirty || comentarioForm.controls['contenido'].touched)" class="alert alert-danger">
+                <br>
+                <br>
+                <div *ngIf="comentarioForm.controls['contenido'].invalid && (comentarioForm.controls['contenido'].touched)" class="alert alert-danger">
                     <div *ngIf="comentarioForm.controls['contenido'].errors.required">
                         ¡No olvides escribir tu comentario!
                     </div>
                 </div>
-                <br>
                 <br>
                 <ngb-rating [(ngModel)]="valoracion" [(rate)]="valoracion" id="valoracion">
                     <ng-template let-fill="fill">
