--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
@@ -89,5 +89,5 @@
     </div>
 </div>
 <div class="alert alert-danger" role="alert" *ngIf="isError">
-    Error en el registro, por favor compruebe que están los campos rellenos correctamente
+    Debe rellenar todos los campos
 </div>
