--- a/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/inicio/inicio.component.html
@@ -1,4 +1,12 @@
 
+			<head>
+			<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+			integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+			crossorigin=""/>
+			<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+			integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+			crossorigin=""></script>
+			</head>
 				<ngb-carousel>
 					<ng-template ngbSlide>
 						<img src="assets/images/big/expo.jpg" alt="Random first slide">
@@ -14,18 +22,11 @@
 							<p></p>
 						</div>
 					</ng-template>
-					<ng-template ngbSlide>
-						<img src="assets/images/big/bolis.jpg" alt="Random third slide">
-						<div class="carousel-caption">
-							<h3 class="text-white font-bold"></h3>
-							<p></p>
-						</div>
-					</ng-template>
 				</ngb-carousel>
 				<br>
 				<br>
 				<br>
-				<div class="col-md-10">
+				<div class="col-md-5">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id nisi a enim vehicula interdum. 
 						Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
@@ -38,7 +39,9 @@
 						Vivamus non lorem aliquam nunc mattis viverra in efficitur ex. Phasellus commodo molestie lacus.
 					</p>
 				</div>
-
+				<div class="col-md-5">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d374.0572068610566!2d-6.007317625966195!3d37.380409423792194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c6a6fd0990f%3A0x448eb556f306897f!2sSalesianos+Triana!5e0!3m2!1ses!2ses!4v1550482988652" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
 				<div>
 					<button class="btn btn-danger">Ver Más</button>
 				</div>
