--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
@@ -31,7 +31,7 @@
                                     </td>
                                 </tr>
                                 <div fxLayout="column" fxLayoutGap="2%">
-                                    <button mat-raised-button color="primary" id="login_boton" (click)="doLogin(example-form)">Login</button>
+                                    <button mat-raised-button color="primary" id="login_boton" (click)="doLogin()">Login</button>
                                     <button mat-stroked-button color="primary" id="loginGogle_boton" (click)="doLoginGoogle()"><i class="fa fa-google"></i> &nbsp;&nbsp; Login Google</button>
                                     <br>
                                 </div>
@@ -77,7 +77,7 @@
                                 </tr>
                                 <tr>
                                 </tr>
-                                <button mat-raised-button color="primary" id="signup_boton" (click)="doSignup(example-form)">Registrarse</button>
+                                <button mat-raised-button color="primary" id="signup_boton" (click)="doSignup()">Registrarse</button>
                                 <br>
                                 <br>
                             </table>
